--- a/notebooks/rigoembeddings-v2/rigoembeddings-v2-Model.ipynb
+++ b/notebooks/rigoembeddings-v2/rigoembeddings-v2-Model.ipynb
@@ -96,7 +96,7 @@
    },
    "outputs": [],
    "source": [
-    "role = \"arn:aws:iam::459676377564:role/SagemakerMarketplace-ExecutionRole\"# get_execution_role()\n",
+    "role = get_execution_role()\n",
     "\n",
     "sagemaker_session = sage.Session()\n",
     "\n",
