--- a/notebooks/rigoembeddings-v2/rigoembeddings-v2-Model.ipynb
+++ b/notebooks/rigoembeddings-v2/rigoembeddings-v2-Model.ipynb
@@ -11,9 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Rigoembeddings** is a text embedding model in Spanish that excels in its accuracy and ability to capture the semantic meaning of words in various contexts. It can be used as a building block for advanced NLP applications and benefits across a wide range of fields. The main applications of this model include NLP, where it enhances text comprehension and generation, facilitating the creation of chatbots, Retrieval-Augmented Generation (RAG), virtual assistants, and recommendation systems among others. \n",
+    "**Rigoembeddings-v2** is a text embedding model in Spanish that excels in its accuracy and ability to capture the semantic meaning of words in various contexts. It can be used as a building block for advanced NLP applications and benefits across a wide range of fields. The main applications of this model include NLP, where it enhances text comprehension and generation, facilitating the creation of chatbots, Retrieval-Augmented Generation (RAG), virtual assistants, and recommendation systems among others. \n",
     "\n",
-    "This sample notebook shows you how to deploy [rigoembeddings](https://aws.amazon.com/marketplace/pp/prodview-y5xk32iebuxy4) using Amazon SageMaker.\n",
+    "This sample notebook shows you how to deploy [rigoembeddings-v2](https://aws.amazon.com/marketplace/pp/prodview-y5xk32iebuxy4) using Amazon SageMaker.\n",
     "\n",
     "## Pre-requisites:\n",
     "1. **Note**: This notebook contains elements which render correctly in Jupyter interface. Open this notebook from an Amazon SageMaker Notebook Instance or Amazon SageMaker Studio.\n",
@@ -23,7 +23,7 @@
     "        1. **aws-marketplace:ViewSubscriptions**\n",
     "        1. **aws-marketplace:Unsubscribe**\n",
     "        1. **aws-marketplace:Subscribe**  \n",
-    "    2. or your AWS account has a subscription to [rigoembeddings](https://aws.amazon.com/marketplace/pp/prodview-y5xk32iebuxy4). If so, skip step: [Subscribe to the model package](#1.-Subscribe-to-the-model-package)\n",
+    "    2. or your AWS account has a subscription to [rigoembeddings-v2](https://aws.amazon.com/marketplace/pp/prodview-y5xk32iebuxy4). If so, skip step: [Subscribe to the model package](#1.-Subscribe-to-the-model-package)\n",
     "\n",
     "## Contents:\n",
     "1. [Subscribe to the model package](#1.-Subscribe-to-the-model-package)\n",
@@ -55,7 +55,7 @@
    "metadata": {},
    "source": [
     "Rigoembeddings is a text embedding model in Spanish that excels in its accuracy and ability to capture the semantic meaning of words in various contexts. It can be used as a building block for advanced NLP applications and benefits across a wide range of fields. The main applications of this model include NLP, where it enhances text comprehension and generation, facilitating the creation of chatbots, Retrieval-Augmented Generation (RAG), virtual assistants, and recommendation systems among others. To subscribe to the model package:\n",
-    "1. Open the model package listing page [rigoembeddings](https://aws.amazon.com/marketplace/pp/prodview-y5xk32iebuxy4).\n",
+    "1. Open the model package listing page [rigoembeddings-v2](https://aws.amazon.com/marketplace/pp/prodview-y5xk32iebuxy4).\n",
     "1. On the AWS Marketplace listing, click on the **Continue to subscribe** button.\n",
     "1. On the **Subscribe to this software** page, review and click on **\"Accept Offer\"** if you and your organization agrees with EULA, pricing, and support terms. \n",
     "1. Once you click on **Continue to configuration button** and then choose a **region**, you will see a **Product Arn** displayed. This is the model package ARN that you need to specify while creating a deployable model using Boto3. Copy the ARN corresponding to your region and specify the same in the following cell."
@@ -69,7 +69,7 @@
    },
    "outputs": [],
    "source": [
-    "model_package_arn = \"arn:aws:sagemaker:eu-west-1:459676377564:model-package/rigoembeddings\""
+    "model_package_arn = \"arn:aws:sagemaker:eu-west-1:459676377564:model-package/rigoembeddings-v2\""
    ]
   },
   {
@@ -127,13 +127,13 @@
    },
    "outputs": [],
    "source": [
-    "model_name = \"rigoembeddings\"\n",
+    "model_name = \"rigoembeddings-v2\"\n",
     "\n",
     "content_type = \"application/json\"\n",
     "\n",
-    "real_time_inference_instance_type = \"ml.g4dn.xlarge\"\n",
+    "real_time_inference_instance_type = \"ml.g5.xlarge\"\n",
     "\n",
-    "batch_transform_inference_instance_type = \"ml.g4dn.xlarge\""
+    "batch_transform_inference_instance_type = \"ml.g5.4xlarge\""
    ]
   },
   {
@@ -221,7 +221,7 @@
    },
    "outputs": [],
    "source": [
-    "for text, embed in zip(payload[\"inputs\"], response[\"vectors\"]):\n",
+    "for text, embed in zip(payload[\"inputs\"], response):\n",
     "    print(text)\n",
     "    print(embed[:10])"
    ]
@@ -343,7 +343,7 @@
    },
    "outputs": [],
    "source": [
-    "for text, embed in zip(payload[\"inputs\"], response[\"vectors\"]):\n",
+    "for text, embed in zip(payload[\"inputs\"], response):\n",
     "    print(text)\n",
     "    print(embed[:10])"
    ]
@@ -396,9 +396,9 @@
  "metadata": {
   "instance_type": "ml.t3.medium",
   "kernelspec": {
-   "display_name": "conda_python3",
+   "display_name": "aws",
    "language": "python",
-   "name": "conda_python3"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -410,7 +410,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
