change dir name

--- a/notebooks/rigochat-7b-v2/rigochat-7b-v2-Model.ipynb
+++ b/notebooks/rigochat-7b-v2/rigochat-7b-v2-Model.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**RigoChat-v2** is the second version of RigoChat, a family of Large Language Models (LLMs) designed to solve typical NLP tasks with Spanish instructions such as: Tool Use, Summarization, Math, Code, Abstractive-QA, etc. This model has no specific use case and can be applied to a wide range of tasks. Indeed, it offers an improvement for generalist tasks in Spanish, particularly in RAG (Retriever Augmented Generation) systems with Spanish databases, as its training focused on resolving questions about contexts to prevent hallucinations and ensure safe responses. \n",
+    "**RigoChat-7b-v2** is the second version of RigoChat, a family of Large Language Models (LLMs) designed to solve typical NLP tasks with Spanish instructions such as: Tool Use, Summarization, Math, Code, Abstractive-QA, etc. This model has no specific use case and can be applied to a wide range of tasks. Indeed, it offers an improvement for generalist tasks in Spanish, particularly in RAG (Retriever Augmented Generation) systems with Spanish databases, as its training focused on resolving questions about contexts to prevent hallucinations and ensure safe responses. \n",
     "\n",
     "\n",
     "This sample notebook shows you how to deploy [RigoChat-7b-v2]() using Amazon SageMaker.\n",
