rename RigoChat model package

--- a/notebooks/rigochat-7b/rigochat-7b-Model.ipynb
+++ b/notebooks/rigochat-7b/rigochat-7b-Model.ipynb
@@ -4,17 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Deploy RigoChat-7b-v2 Model Package from AWS Marketplace \n"
+    "# Deploy RigoChat-7b Model Package from AWS Marketplace \n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**RigoChat-7b-v2** is the second version of RigoChat, a family of Large Language Models (LLMs) designed to solve typical NLP tasks with Spanish instructions such as: Tool Use, Summarization, Math, Code, Abstractive-QA, etc. This model has no specific use case and can be applied to a wide range of tasks. Indeed, it offers an improvement for generalist tasks in Spanish, particularly in RAG (Retriever Augmented Generation) systems with Spanish databases, as its training focused on resolving questions about contexts to prevent hallucinations and ensure safe responses. \n",
+    "**RigoChat-7b** is the second version of RigoChat, a family of Large Language Models (LLMs) designed to solve typical NLP tasks with Spanish instructions such as: Tool Use, Summarization, Math, Code, Abstractive-QA, etc. This model has no specific use case and can be applied to a wide range of tasks. Indeed, it offers an improvement for generalist tasks in Spanish, particularly in RAG (Retriever Augmented Generation) systems with Spanish databases, as its training focused on resolving questions about contexts to prevent hallucinations and ensure safe responses. \n",
     "\n",
     "\n",
-    "This sample notebook shows you how to deploy [RigoChat-7b-v2]() using Amazon SageMaker.\n",
+    "This sample notebook shows you how to deploy [RigoChat-7b]() using Amazon SageMaker.\n",
     "\n",
     "## Pre-requisites:\n",
     "1. **Note**: This notebook contains elements which render correctly in Jupyter interface. Open this notebook from an Amazon SageMaker Notebook Instance or Amazon SageMaker Studio.\n",
@@ -24,7 +24,7 @@
     "        1. **aws-marketplace:ViewSubscriptions**\n",
     "        1. **aws-marketplace:Unsubscribe**\n",
     "        1. **aws-marketplace:Subscribe**  \n",
-    "    2. or your AWS account has a subscription to [RigoChat-7b-v2](). If so, skip step: [Subscribe to the model package](#1.-Subscribe-to-the-model-package)\n",
+    "    2. or your AWS account has a subscription to [RigoChat-7b](). If so, skip step: [Subscribe to the model package](#1.-Subscribe-to-the-model-package)\n",
     "\n",
     "## Contents:\n",
     "1. [Subscribe to the model package](#1.-Subscribe-to-the-model-package)\n",
@@ -56,7 +56,7 @@
    "metadata": {},
    "source": [
     "To subscribe to the model package:\n",
-    "1. Open the model package listing page [RigoChat-7b-v2]().\n",
+    "1. Open the model package listing page [RigoChat-7b]().\n",
     "2. On the AWS Marketplace listing, click on the **Continue to subscribe** button.\n",
     "3. On the **Subscribe to this software** page, review and click on **\"Accept Offer\"** if you and your organization agrees with EULA, pricing, and support terms. \n",
     "4. Once you click on **Continue to configuration button** and then choose a **region**, you will see a **Product Arn** displayed. This is the model package ARN that you need to specify while creating a deployable model using Boto3. Copy the ARN corresponding to your region and specify the same in the following cell."
@@ -70,7 +70,7 @@
    },
    "outputs": [],
    "source": [
-    "model_package_arn = \"arn:aws:sagemaker:eu-west-1:<AWS-ACCOUNT>:model-package/RigoChat-7b-v2\""
+    "model_package_arn = \"arn:aws:sagemaker:eu-west-1:<AWS-ACCOUNT>:model-package/RigoChat-7b\""
    ]
   },
   {
