fix: changed input file

--- a/notebooks/easyReadingAnalyzer/ERAS.ipynb
+++ b/notebooks/easyReadingAnalyzer/ERAS.ipynb
@@ -82,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_package_arn = \"arn:aws:sagemaker:eu-west-1:...:model-package/eras\""
+    "model_package_arn = \"arn:aws:sagemaker:eu-west-1:509399621820:model-package/easyReading\""
    ]
   },
   {
@@ -169,7 +169,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"data/input/data_input.json\") as fp:\n",
+    "with open(\"data/input/input.json\") as fp:\n",
     "    payload = json.load(fp)"
    ]
   },
@@ -203,23 +203,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "r = json.load(response[\"Body\"])\n",
+    "r = json.loads(response[\"body\"])\n",
     "\n",
-    "if \"html\" in json.loads(r[\"body\"]):\n",
-    "    html_content = json.loads(r[\"body\"])[\"html\"]\n",
+    "if \"html\" in r:\n",
+    "    html_content = r[\"html\"]\n",
     "\n",
     "    with open(\n",
-    "        \"path_to/output.html\",\n",
+    "        \"output.html\",\n",
     "        \"w\",\n",
     "        encoding=\"utf-8\",\n",
     "    ) as f:\n",
     "        f.write(html_content)\n",
     "        print(\"HTML saved\")\n",
-    "    print(\"Metrics: \", json.loads(r[\"body\"])[\"summary\"])\n",
+    "    print(\"Metrics: \", r[\"summary\"])\n",
     "\n",
     "else:\n",
     "    print(\"No 'html' field found in response body\")\n",
-    "    print(\"Metrics: \", json.loads(r[\"body\"]))"
+    "    print(\"Metrics: \", r)"
    ]
   },
   {
@@ -326,24 +326,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res = json.load(response[\"body\"])\n",
+    "r = json.loads(response[\"body\"])\n",
     "\n",
-    "\n",
-    "if \"html\" in json.load(response[\"body\"]):\n",
-    "    html_content_batch = json.loads(r[\"body\"])[\"html\"]\n",
+    "if \"html\" in r:\n",
+    "    html_batch_content = r[\"html\"]\n",
     "\n",
     "    with open(\n",
-    "        \"data/output.html\",\n",
+    "        \"batch_output.html\",\n",
     "        \"w\",\n",
     "        encoding=\"utf-8\",\n",
     "    ) as f:\n",
-    "        f.write(html_content_batch)\n",
+    "        f.write(html_batch_content)\n",
     "        print(\"HTML saved\")\n",
-    "    print(\"Metrics: \", json.loads(r[\"body\"])[\"summary\"])\n",
+    "    print(\"Metrics: \", r[\"summary\"])\n",
     "\n",
     "else:\n",
     "    print(\"No 'html' field found in response body\")\n",
-    "    print(\"Metrics: \", json.loads(r[\"body\"]))"
+    "    print(\"Metrics: \", r)"
    ]
   },
   {
