fix: aadded output description

--- a/notebooks/easyReadingAnalyzer/ERAS.ipynb
+++ b/notebooks/easyReadingAnalyzer/ERAS.ipynb
@@ -198,6 +198,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If *mode* is set to the *report* option, the report can be correctly viewed by saving its content as an HTML file (as shown below) and opening it in a web browser."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
