fix: added marketplace links

--- a/notebooks/easyReadingAnalyzer/ERAS.ipynb
+++ b/notebooks/easyReadingAnalyzer/ERAS.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "**ERAS - Easy Reading Analyzer for Spanish** is an easy reading analyzer for Spanish texts. With four global indexes and thirty subindexes, it evaluates text linguistic features and allows to easily detect readability improvement areas. \n",
     "\n",
-    "This sample notebook shows you how to deploy ERAS using Amazon SageMaker.\n",
+    "This sample notebook shows you how to deploy [ERAS](https://aws.amazon.com/marketplace/pp/prodview-j7ulhcy66xlrc?applicationId=AWS-Marketplace-Console&ref_=beagle&sr=0-1) using Amazon SageMaker.\n",
     "\n",
     "## Pre-requisites:\n",
     "1. **Note**: This notebook contains elements which render correctly in Jupyter interface. Open this notebook from an Amazon SageMaker Notebook Instance or Amazon SageMaker Studio.\n",
@@ -23,7 +23,7 @@
     "        1. **aws-marketplace:ViewSubscriptions**\n",
     "        1. **aws-marketplace:Unsubscribe**\n",
     "        1. **aws-marketplace:Subscribe**  \n",
-    "    2. or your AWS account has a subscription to ERAS. If so, skip step: [Subscribe to the model package](#1.-Subscribe-to-the-model-package)\n",
+    "    2. or your AWS account has a subscription to [ERAS](https://aws.amazon.com/marketplace/pp/prodview-j7ulhcy66xlrc?applicationId=AWS-Marketplace-Console&ref_=beagle&sr=0-1). If so, skip step: [Subscribe to the model package](#1.-Subscribe-to-the-model-package)\n",
     "\n",
     "## Contents:\n",
     "1. [Subscribe to the model package](#1.-Subscribe-to-the-model-package)\n",
@@ -55,7 +55,7 @@
    "source": [
     "To subscribe to the model package:\n",
     "\n",
-    "1. Open the model package listing page ERAS.\n",
+    "1. Open the model package listing page [ERAS](https://aws.amazon.com/marketplace/pp/prodview-j7ulhcy66xlrc?applicationId=AWS-Marketplace-Console&ref_=beagle&sr=0-1).\n",
     "2. On the AWS Marketplace listing, click on the **Continue to subscribe** button.\n",
     "3. On the **Subscribe to this software** page, review and click on **\"Accept Offer\"** if you and your organization agrees with EULA, pricing, and support terms.\n",
     "4. Once you click on **Continue to configuration button** and then choose a **region**, you will see a **Product Arn** displayed. This is the model package ARN that you need to specify while creating a deployable model using Boto3. Copy the ARN corresponding to your region and specify the same in the following cell."
@@ -82,7 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_package_arn = \"arn:aws:sagemaker:eu-west-1:509399621820:model-package/easyReading\""
+    "model_package_arn = \"arn:aws:sagemaker:eu-west-1:985815980388:model-package/easyreadinganalyzer\""
    ]
   },
   {
@@ -120,7 +120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_name = \"easy_reading_analyzer\"\n",
+    "model_name = \"easyReadingAnalyzer\"\n",
     "\n",
     "content_type = \"application/json\"\n",
     "\n",
@@ -386,7 +386,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you would like to unsubscribe to the model package, follow these steps. Before you cancel the subscription, ensure that you do not have any deployable model created from the model package or using the algorithm. Note - You can find this information by looking at the container name associated with the model."
+    "If you would like to unsubscribe to the model package, follow these steps. Before you cancel the subscription, ensure that you do not have any [deployable model](https://console.aws.amazon.com/sagemaker/home#/models) created from the model package or using the algorithm. Note - You can find this information by looking at the container name associated with the model."
    ]
   },
   {
@@ -395,9 +395,14 @@
    "source": [
     "**Steps to unsubscribe to product from AWS Marketplace:**\n",
     "\n",
-    "1. Navigate to **Machine Learning** tab on Your Software subscriptions page\n",
-    "2. Locate the listing that you want to cancel the subscription for, and then choose *Cancel Subscription* to cancel the subscription."
+    "1. Navigate to **Machine Learning** tab on [__Your Software subscriptions page__](https://aws.amazon.com/marketplace/ai/library?productType=ml&ref_=mlmp_gitdemo_indust)\n",
+    "2. Locate the listing that you want to cancel the subscription for, and then choose  __Cancel Subscription__  to cancel the subscription."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
