Added RigoChat links to notebook

--- a/notebooks/rigochat-7b/rigochat-7b-Model.ipynb
+++ b/notebooks/rigochat-7b/rigochat-7b-Model.ipynb
@@ -129,7 +129,7 @@
    },
    "outputs": [],
    "source": [
-    "model_name = \"rigochat-v2\"\n",
+    "model_name = \"rigochat-7b\"\n",
     "\n",
     "content_type = \"application/json\"\n",
     "\n",
