--- a/notebooks/easyReadingAnalyzer/ERAS.ipynb
+++ b/notebooks/easyReadingAnalyzer/ERAS.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "**ERAS - Easy Reading Analyzer for Spanish** is an easy reading analyzer for Spanish texts. With four global indexes and thirty subindexes, it evaluates text linguistic features and allows to easily detect readability improvement areas. \n",
     "\n",
-    "This sample notebook shows you how to deploy [ERAS](https://aws.amazon.com/marketplace/pp/prodview-j7ulhcy66xlrc?applicationId=AWS-Marketplace-Console&ref_=beagle&sr=0-1) using Amazon SageMaker.\n",
+    "This sample notebook shows you how to deploy [ERAS](https://aws.amazon.com/marketplace/pp/prodview-j7ulhcy66xlrc) using Amazon SageMaker.\n",
     "\n",
     "## Pre-requisites:\n",
     "1. **Note**: This notebook contains elements which render correctly in Jupyter interface. Open this notebook from an Amazon SageMaker Notebook Instance or Amazon SageMaker Studio.\n",
@@ -23,7 +23,7 @@
     "        1. **aws-marketplace:ViewSubscriptions**\n",
     "        1. **aws-marketplace:Unsubscribe**\n",
     "        1. **aws-marketplace:Subscribe**  \n",
-    "    2. or your AWS account has a subscription to [ERAS](https://aws.amazon.com/marketplace/pp/prodview-j7ulhcy66xlrc?applicationId=AWS-Marketplace-Console&ref_=beagle&sr=0-1). If so, skip step: [Subscribe to the model package](#1.-Subscribe-to-the-model-package)\n",
+    "    2. or your AWS account has a subscription to [ERAS](https://aws.amazon.com/marketplace/pp/prodview-j7ulhcy66xlrc). If so, skip step: [Subscribe to the model package](#1.-Subscribe-to-the-model-package)\n",
     "\n",
     "## Contents:\n",
     "1. [Subscribe to the model package](#1.-Subscribe-to-the-model-package)\n",
@@ -55,7 +55,7 @@
    "source": [
     "To subscribe to the model package:\n",
     "\n",
-    "1. Open the model package listing page [ERAS](https://aws.amazon.com/marketplace/pp/prodview-j7ulhcy66xlrc?applicationId=AWS-Marketplace-Console&ref_=beagle&sr=0-1).\n",
+    "1. Open the model package listing page [ERAS](https://aws.amazon.com/marketplace/pp/prodview-j7ulhcy66xlrc).\n",
     "2. On the AWS Marketplace listing, click on the **Continue to subscribe** button.\n",
     "3. On the **Subscribe to this software** page, review and click on **\"Accept Offer\"** if you and your organization agrees with EULA, pricing, and support terms.\n",
     "4. Once you click on **Continue to configuration button** and then choose a **region**, you will see a **Product Arn** displayed. This is the model package ARN that you need to specify while creating a deployable model using Boto3. Copy the ARN corresponding to your region and specify the same in the following cell."
