fix: model package arn

--- a/notebooks/languageUnderstandingAndClarityEvaluation/LUCES.ipynb
+++ b/notebooks/languageUnderstandingAndClarityEvaluation/LUCES.ipynb
@@ -82,7 +82,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_package_arn = \"arn:aws:sagemaker:eu-west-1:985815980388:model-package/LUCES\""
+    "#Specify model package ARN\n",
+    "model_package_arn = \"arn:aws:sagemaker:..:..:model-package/languageunderstandingandclarit\""
    ]
   },
   {
