fix: update clausemapper and legalanalyze links

--- a/notebooks/clausemapper/clausemapper.ipynb
+++ b/notebooks/clausemapper/clausemapper.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "**ClauseMapper** is a clause classifier for contracts in Spanish. This classifier analyzes the contract text and identifies the segments of information related up to 15 types of different clauses.\n",
     "\n",
-    "This sample notebook shows you how to deploy [ClauseMapper](https://aws.amazon.com/marketplace/pp/) using Amazon SageMaker.\n",
+    "This sample notebook shows you how to deploy [ClauseMapper](https://aws.amazon.com/marketplace/pp/prodview-mu737rfu24c7w) using Amazon SageMaker.\n",
     "\n",
     "## Pre-requisites:\n",
     "1. **Note**: This notebook contains elements which render correctly in Jupyter interface. Open this notebook from an Amazon SageMaker Notebook Instance or Amazon SageMaker Studio.\n",
@@ -23,7 +23,7 @@
     "        1. **aws-marketplace:ViewSubscriptions**\n",
     "        1. **aws-marketplace:Unsubscribe**\n",
     "        1. **aws-marketplace:Subscribe**  \n",
-    "    2. or your AWS account has a subscription to [ClauseMapper](https://aws.amazon.com/marketplace/pp/). If so, skip step: [Subscribe to the model package](#1.-Subscribe-to-the-model-package)\n",
+    "    2. or your AWS account has a subscription to [ClauseMapper](https://aws.amazon.com/marketplace/pp/prodview-mu737rfu24c7w). If so, skip step: [Subscribe to the model package](#1.-Subscribe-to-the-model-package)\n",
     "\n",
     "## Contents:\n",
     "1. [Subscribe to the model package](#1.-Subscribe-to-the-model-package)\n",
@@ -55,7 +55,7 @@
    "source": [
     "To subscribe to the model package:\n",
     "\n",
-    "1. Open the model package listing page [ClauseMapper](https://aws.amazon.com/marketplace/pp/).\n",
+    "1. Open the model package listing page [ClauseMapper](https://aws.amazon.com/marketplace/pp/prodview-mu737rfu24c7w).\n",
     "2. On the AWS Marketplace listing, click on the **Continue to subscribe** button.\n",
     "3. On the **Subscribe to this software** page, review and click on **\"Accept Offer\"** if you and your organization agrees with EULA, pricing, and support terms.\n",
     "4. Once you click on **Continue to configuration button** and then choose a **region**, you will see a **Product Arn** displayed. This is the model package ARN that you need to specify while creating a deployable model using Boto3. Copy the ARN corresponding to your region and specify the same in the following cell."
